Rendered homepage of Faceapp

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,1 +1,5 @@
 <!-- ... -->
+<%- include("../partials/header") -%>
+<div class="home-page"></div>
+<h2>All Facespace members</h2>
+<%- include("../partials/footer") -%>
