--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -2,4 +2,12 @@
 <%- include("../partials/header") -%>
 <div class="home-page"></div>
 <h2>All Facespace members</h2>
+<ul class="homepage__all">
+    <% users.forEach(user => { %>
+    <li class="homepage__all--user">
+      <img src="<%= user.avatarUrl %>" />
+    </li>
+    <% }) %>
+  </ul>
+
 <%- include("../partials/footer") -%>
