Profile page ok

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,6 +1,6 @@
 <!-- ... -->
 <%- include("../partials/header") -%>
-<div class="home-page"></div>
+<div class="homepage">
 <h2>All Facespace members</h2>
 <ul class="homepage__all">
     <% users.forEach(user => { %>
@@ -9,5 +9,5 @@
     </li>
     <% }) %>
   </ul>
-
+</div>
 <%- include("../partials/footer") -%>
