--- a/public/css/settings/typography.css
+++ b/public/css/settings/typography.css
@@ -6,7 +6,7 @@ h1 a,
 h2,
 h3,
 h4 {
-  color: #cc5500;
+  color: var(--primary-color);
   font-family: 'Teko', sans-serif;
   line-height: 1em;
 }
@@ -17,6 +17,13 @@ h1 a {
   font-size: 36px;
   margin-top: 3px;
   text-decoration: none;
+}
+
+.signin-link  {
+  color: #fff;
+  font-size: 24px;
+  text-decoration: none;
+  font-family: 'Teko', sans-serif;
 }
 
 h2 {
