--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,5 +8,5 @@
 <body>
   <header class="header">
       <h1 class='site-title'><a href="/">Facespace</a></h1>
-      <a href="/signin" class='signin-link'>Sign In</a>
+      <a href="/signin" class='signin-link'><%- name === undefined ? "Sign In" : `Howdy, ${name}` %> </a>
   </header>
