--- a/public/css/settings/typography.css
+++ b/public/css/settings/typography.css
@@ -12,18 +12,28 @@ h4 {
 }
 
 h1,
-h1 a {
+h1 a,
+.signin-link,
+.ribbon {
   color: #fff;
+  font-family: 'Teko', sans-serif;
+}
+
+
+h1,
+h1 a {
   font-size: 36px;
   margin-top: 3px;
   text-decoration: none;
 }
 
 .signin-link  {
-  color: #fff;
   font-size: 24px;
   text-decoration: none;
-  font-family: 'Teko', sans-serif;
+}
+
+.ribbon{
+
 }
 
 h2 {
