--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,11 +1,15 @@
 <!-- ... -->
-<%- include("../partials/header") -%>
+<%- include("../partials/header",  { name: currentUser.name }) -%>
 <div class="homepage">
 <h2>All Facespace members</h2>
 <ul class="homepage__all">
     <% users.forEach(user => { %>
     <li class="homepage__all--user">
-      <img src="<%= user.avatarUrl %>" />
+      <a href= <%- `/users/${user._id}`%> ><img src="<%= user.avatarUrl %>" /></a>
+      <% if (currentUser.friends !== undefined && currentUser.friends.includes(user._id)) {%>
+        <span class="ribbon">Friend</span>
+        <% }%>
+      
     </li>
     <% }) %>
   </ul>
