--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/header', { name : currentUser.name}) %>
 <div class="profile-page ">
     <div class="profile-page--banner"></div>
     <div class="profile-page__user">
