added unfriend button

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,5 +1,5 @@
 <!-- ... -->
-<%- include("../partials/header",  { name: currentUser.name }) -%>
+<%- include("../partials/header",  { currentUser }) -%>
 <div class="homepage">
 <h2>All Facespace members</h2>
 <ul class="homepage__all">
