--- a/views/pages/signin.ejs
+++ b/views/pages/signin.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header', {name: undefined}) %>
+<%- include('../partials/header', { currentUser}) %>
 <div class="signin-page">
   <form method="post" action="/getname" class="signin-page__form">
     <label for="firstName" class="signin-page__form--label">First name</label>
