--- a/public/css/components/profile-page.css
+++ b/public/css/components/profile-page.css
@@ -49,11 +49,20 @@
   border: 5px solid var(--primary-color);
 }
 
+.unfriend--btn {
+  display: none;
+  height : 30px;
+}
+
+.visible{
+  display: block;
+}
+
 @media screen and (min-width: 600px) {
   .profile-page__user {
     display: flex;
   }
-  .profile-page__user h2 {
+  .profile-page__user h2, .profile-page__user button {
     margin-left: 18px;
   }
   .profile-page__user--avatar {
