--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,9 +1,14 @@
-<%- include('../partials/header', { name : currentUser.name}) %>
+<%- include('../partials/header', { currentUser}) %>
 <div class="profile-page ">
     <div class="profile-page--banner"></div>
     <div class="profile-page__user">
         <img src=<%=`${user.avatarUrl}`%> alt=<%=`${user.name}'s picture`%> class="profile-page__user--avatar">
+        <div>
         <h2><%= user.name %></h2>
+
+        <button class="unfriend--btn <%- (currentUser.name !== undefined && currentUser.name !== user.name && currentUser.friends.includes(user._id)) ? "visible" : "" %>" id="unfriend--btn">Unfriend</button> 
+
+    </div>
     </div>
     <div class="profile-page__friends">
         <h3><%= user.name %>'s Friends</h3>
